===================================
TSDuck Change Log and Release Notes
===================================

Version 3.9

- Added options --sei-avc and --uuid-sei to plugin pes.

- Added signalization for data broadcast and MPE.

- Improved display of Dektec devices capabilities.

- In all TSDuck commands, parameters can be read from a file using the syntax
  "@filename" anywhere in the command line. See the user's guide for details.

- Bug fix on Windows: Command "tsversion --upgrade" failed because tsversion.exe
  and tsduck.dll were locked by upgrade command.

Version 3.8-534

- Added options --source and --first-source to input plugin ip.

- Added option --periodic-bitrate to plugin bitrate_monitor.

- Added options --pid, --csv and --log to plugin pcrextract.

- Added XML support for more DVB and EACEM descriptors.

- When the output plugin "play" uses VLC, the player exits automatically at the
  end of the video playout.

- On macOS, the output plugin "play" now correctly detects VLC in its original
  installation path.

- Bug fix in the compilation of XML tables: when DVB strings were encoded with
  a character set different from ISO-6937 (the default character set), the
  table code was not correctly inserted at the beginning of the string.

- Bug fix in plugin bitrate_monitor. The message was incorrect when the bitrate
  is *greater* then the limit (the message was ok in other cases).

- Bug fix in plugin rmsplice. With option --adjust time, the time stamps were
  not correctly adjusted.

Version 3.7-512

- Added plugin teletext to extract Teletext subtitles in SRT format.

- Added plugin rmsplice to remove ads insertions when signaled using SCTE 35
  splice information.

- Added option --add-ca-descriptor to plugin pmt.

- More details are displayed in SCTE 35 splice information.

- The command tsp --list is now paged, like option --help.

- Bug fix in tstables and plugin tables: with XML output, option --time-stamp